--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon"
+    "start": "babel-node src/server.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.10",
