--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "license": "MIT",
   "scripts": {
-    "start": "node build/server.js",
-    "build": "babel src -d build"
+    "dev": "nodemon",
+    "start": "node lib/server.js",
+    "build": "babel src -d lib"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.10",
